<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RecurringTaskFragment">

    <RelativeLayout
        android:id="@+id/rlDummy"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/grey_5"
        android:elevation="2dp"
        android:gravity="start|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgHeader"
            android:layout_width="36dp"
            android:layout_height="@dimen/dimen_32"
            android:layout_alignTop="@+id/tvTitle"
            android:layout_alignBottom="@+id/tvTitle"
            android:layout_marginVertical="3dp"
            android:layout_marginStart="@dimen/dimen_24"
            android:src="@drawable/ic_calendar" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:background="@color/grey_100"
            android:fontFamily="@font/nunito"
            android:gravity="start|center_vertical"
            android:text="@string/title_recurring_task"
            android:layout_toEndOf="@id/imgHeader"
            android:textColor="@color/blue_grey_800"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_repeatItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        android:background="@color/grey_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlDummy"
        tools:listitem="@layout/item_repeat_task" />

    <RelativeLayout
        android:id="@+id/rlEmptyStateLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlDummy">

        <ImageView
            android:id="@+id/dummyImage"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="133dp"
            android:layout_marginEnd="-1dp"
            android:src="@drawable/ic_reccuring_large" />

        <TextView
            android:id="@+id/dummyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dummyImage"
            android:layout_marginTop="28dp"
            android:layout_centerHorizontal="true"
            android:text="@string/recurring_title"
            android:textColor="@color/grey_900"
            android:textStyle="bold"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dummyText"
            android:layout_centerHorizontal="true"
            android:text="@string/recurring_sub_title"
            android:layout_marginTop="@dimen/dimen_8"
            android:textColor="@color/grey_700"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="normal" />

    </RelativeLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        app:backgroundTint="@color/blue_600"
        android:src="@drawable/ic_add"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/content_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>