<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <EditText
        android:id="@+id/etTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_task"
        android:textSize="16sp"
        android:paddingStart="@dimen/dimen_16"
        android:paddingEnd="@dimen/dimen_16"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/bg_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTaskTitle" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_grey_border"
        android:padding="@dimen/dimen_8"
        app:cardCornerRadius="@dimen/dimen_4"
        app:cardElevation="@dimen/dimen_0"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/bg_grey_border"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:padding="@dimen/dimen_8"
                android:text="Today"
                android:textSize="17sp"
                android:layout_marginStart="@dimen/dimen_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="16dp"
                android:layout_height="14dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_12"
                android:src="@drawable/ic_down_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:visibility="gone"
        android:background="@drawable/bg_grey_border"
        android:minWidth="120dp"
        android:padding="@dimen/dimen_8"
        android:entries="@array/spinner_tags"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_12"
        android:layout_marginBottom="@dimen/dimen_12"
        android:layout_marginEnd="18dp"
        android:elevation="@dimen/dimen_0"
        android:text="@string/add"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btSave"
        app:layout_constraintTop_toBottomOf="@+id/etTaskTitle" />

    <TextView
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_12"
        android:layout_marginBottom="@dimen/dimen_12"
        android:layout_marginEnd="18dp"
        android:elevation="@dimen/dimen_0"
        android:text="@string/done"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTaskTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>